force-app/main/default/objects/Account/fields/Account_Is_Owned__c.field-meta.xml
<CustomField>
    <fullName>Account_Is_Owned__c</fullName>
    <formula>or (
 OwnerId = &apos;00546000000u1Or&apos;, /* Kevin Gates */
 OwnerId = &apos;00546000000u1Oh&apos;, /* Jennifer Malcolm */
 OwnerId = &apos;00546000000u1P6&apos;, /* Tricia Rizzo */
 OwnerId = &apos;00546000001eZuE&apos;, /* Mitchell McGuffin */
 OwnerId = &apos;00546000001goI9&apos;, /* Tara Dutrizac */
 OwnerId = &apos;00546000000vDvA&apos;  /* Jason Janusz */
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Is Owned</label>
    <type>Checkbox</type>
</CustomField>