force-app/main/default/objects/Account/fields/Account_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Type__c</fullName>
    <defaultValue>&quot;Non-Exclusive&quot;</defaultValue>
    <label>Account Owner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Exclusive</fullName>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>