force-app/main/default/objects/Account/fields/Account_Owner_With_TMP__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_With_TMP__c</fullName>
    <formula>if (ISBLANK(Temporary_Owner__c),

if (Owner.LastName = &quot;Ivanic&quot;, &quot;&quot;, 
Owner.FirstName + &quot; &quot; +  Owner.LastName),

Temporary_Owner__r.FirstName + &quot; &quot; +  Temporary_Owner__r.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>