force-app/main/default/objects/Account/fields/Added_To_Intacct__c.field-meta.xml
<CustomField>
    <fullName>Added_To_Intacct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added To Intacct</label>
    <type>Checkbox</type>
</CustomField>