force-app/main/default/objects/Account/fields/Additional_Online_Training_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Online_Training_Notes__c</fullName>
    <label>Additional Online Training Notes</label>
    <type>TextArea</type>
</CustomField>