force-app/main/default/objects/Account/fields/Allow_Quote_To_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Allow_Quote_To_Sales_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Quote To Sales Rep</label>
    <type>Checkbox</type>
</CustomField>