force-app/main/default/objects/Account/fields/Annual_Opportunity_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Opportunity_Revenue__c</fullName>
    <inlineHelpText>Total of all &apos;Closed Won&apos; opportunities on Account (Current year)</inlineHelpText>
    <label>Annual Opportunity Revenue</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterThan</operation>
        <value>1/1/2019</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>