force-app/main/default/objects/Account/fields/April_Goal__c.field-meta.xml
<CustomField>
    <fullName>April_Goal__c</fullName>
    <label>April Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>