force-app/main/default/objects/Account/fields/April_Sales__c.field-meta.xml
<CustomField>
    <fullName>April_Sales__c</fullName>
    <defaultValue>0</defaultValue>
    <label>April Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>