force-app/main/default/objects/Account/fields/April_State__c.field-meta.xml
<CustomField>
    <fullName>April_State__c</fullName>
    <label>April State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>