force-app/main/default/objects/Account/fields/Attendee_Expiration_Report_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Expiration_Report_6_Months__c</fullName>
    <formula>HYPERLINK(&quot;#/sObject/00O4p000004GKm7EAG/view?fv0=&quot;&amp; Id, &quot;Attendee Expiration Report&quot;, &quot;_self&quot;)</formula>
    <label>Attendee Expiration Report (6 Months)</label>
    <type>Text</type>
</CustomField>