force-app/main/default/objects/Account/fields/Attendee_Training_History__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Training_History__c</fullName>
    <description>Attendee History Report</description>
    <formula>HYPERLINK(&quot;#/sObject/00O46000000X5ImEAK/view?fv0=&quot;&amp; Id, &quot;Attendee Training History Report&quot;, &quot;_self&quot;)</formula>
    <inlineHelpText>Attendee History Report</inlineHelpText>
    <label>Attendee Training History</label>
    <type>Text</type>
</CustomField>