force-app/main/default/objects/Account/fields/August_Goal__c.field-meta.xml
<CustomField>
    <fullName>August_Goal__c</fullName>
    <label>August Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>