force-app/main/default/objects/Account/fields/August_Sales__c.field-meta.xml
<CustomField>
    <fullName>August_Sales__c</fullName>
    <defaultValue>0</defaultValue>
    <label>August Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>