force-app/main/default/objects/Account/fields/August_State__c.field-meta.xml
<CustomField>
    <fullName>August_State__c</fullName>
    <label>August State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>