force-app/main/default/objects/Account/fields/Billing_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Tax_Code__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Tax code is based on the Shipping address province</description>
    <label>Account Tax Code</label>
    <referenceTo>Tax_Rate__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>