force-app/main/default/objects/Account/fields/CB_Company_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>CB_Company_Legal_Name__c</fullName>
    <label>CB_Company_Legal_Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>