force-app/main/default/objects/Account/fields/Child_Company_Contact_Required__c.field-meta.xml
<CustomField>
    <fullName>Child_Company_Contact_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If it is a child account, this determines if we contact the child directly or the parent</description>
    <inlineHelpText>If this is checked, this child account should be contacted instead of the parent account</inlineHelpText>
    <label>Child Company - Contact Required</label>
    <type>Checkbox</type>
</CustomField>