force-app/main/default/objects/Account/fields/Clean_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Clean_Account_Name__c</fullName>
    <formula>if ( Principal_Account__c , trim(left(Name, len(Name)-11)), trim(Name))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clean Account Name</label>
    <type>Text</type>
</CustomField>