force-app/main/default/objects/Account/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <description>Captures the client id. Legacy field from STARs.</description>
    <displayFormat>C{000000}</displayFormat>
    <label>Client ID</label>
    <type>AutoNumber</type>
</CustomField>