force-app/main/default/objects/Account/fields/Client_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_ID_Number__c</fullName>
    <formula>if (ISNUMBER(right(Client_ID__c , len(Client_ID__c )-1)), value(right(Client_ID__c , len(Client_ID__c )-1)), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client ID Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>