force-app/main/default/objects/Account/fields/Covid_Discount__c.field-meta.xml
<CustomField>
    <fullName>Covid_Discount__c</fullName>
    <label>Covid Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>