force-app/main/default/objects/Account/fields/Days_Since_Last_Sale__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Sale__c</fullName>
    <formula>if(NOT(ISBLANK(Last_Sales_Date__c)),
TODAY() -  Last_Sales_Date__c,
TODAY() -  DATEVALUE(CreatedDate))</formula>
    <label>Days Since Last Sale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>