force-app/main/default/objects/Account/fields/December_Goal__c.field-meta.xml
<CustomField>
    <fullName>December_Goal__c</fullName>
    <label>December Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>