force-app/main/default/objects/Account/fields/December_State__c.field-meta.xml
<CustomField>
    <fullName>December_State__c</fullName>
    <label>December State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>