force-app/main/default/objects/Account/fields/Default_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Default_Payment_Method__c</fullName>
    <label>Default Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Methods</valueSetName>
    </valueSet>
</CustomField>