force-app/main/default/objects/Account/fields/Default_SF_Orders_To_Not_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Default_SF_Orders_To_Not_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default SF Orders To Not Invoice</label>
    <type>Checkbox</type>
</CustomField>