force-app/main/default/objects/Account/fields/Distributor_Account__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Account__c</fullName>
    <formula>If( 
LearningLogin_Owner_Do_Not_Sync__c = true,
IMAGE(&quot;/img/msg_icons/error24.png&quot;, &quot;distributor&quot;, 24, 24),
&quot;&quot;
)</formula>
    <label>Distributor Account</label>
    <type>Text</type>
</CustomField>