force-app/main/default/objects/Account/fields/Do_Not_Pay_LMS_Commission__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Pay_LMS_Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Pay LMS Commission</label>
    <type>Checkbox</type>
</CustomField>