force-app/main/default/objects/Account/fields/Electronic_Devices_Allowed_on_Premises__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Devices_Allowed_on_Premises__c</fullName>
    <description>Is the trainer allowed to bring electronic devices to the client&apos;s location?</description>
    <inlineHelpText>Is the trainer allowed to bring electronic devices to the client&apos;s location?</inlineHelpText>
    <label>Devices Allowed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>