force-app/main/default/objects/Account/fields/February_Goal__c.field-meta.xml
<CustomField>
    <fullName>February_Goal__c</fullName>
    <label>February Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>