force-app/main/default/objects/Account/fields/February_State__c.field-meta.xml
<CustomField>
    <fullName>February_State__c</fullName>
    <label>February State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>