force-app/main/default/objects/Account/fields/Fiscal_Q1_Sales__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Q1_Sales__c</fullName>
    <formula>September_Sales__c + October_Sales__c + November_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Q1 Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>