force-app/main/default/objects/Account/fields/Fiscal_Q1_State__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Q1_State__c</fullName>
    <label>Fiscal Q1 State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>