force-app/main/default/objects/Account/fields/Fiscal_Q2_Goal__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Q2_Goal__c</fullName>
    <label>Fiscal Q2 Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>