force-app/main/default/objects/Account/fields/Fiscal_Q2_Sales__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Q2_Sales__c</fullName>
    <formula>December_Sales__c + January_Sales__c + February_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Q2 Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>