force-app/main/default/objects/Account/fields/Fiscal_Q3_Sales__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Q3_Sales__c</fullName>
    <formula>March_Sales__c + April_Sales__c + May_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Q3 Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>