force-app/main/default/objects/Account/fields/Fiscal_Q3_State__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Q3_State__c</fullName>
    <label>Fiscal Q3 State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>