force-app/main/default/objects/Account/fields/Fiscal_Year_Goal__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_Goal__c</fullName>
    <label>Fiscal Year Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>