force-app/main/default/objects/Account/fields/Fiscal_Year_Sales__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_Sales__c</fullName>
    <formula>Fiscal_Q1_Sales__c + Fiscal_Q2_Sales__c + Fiscal_Q3_Sales__c + Fiscal_Q4_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>