force-app/main/default/objects/Account/fields/Force_Count_Update__c.field-meta.xml
<CustomField>
    <fullName>Force_Count_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Count Update</label>
    <type>Checkbox</type>
</CustomField>