force-app/main/default/objects/Account/fields/Freeze_Date__c.field-meta.xml
<CustomField>
    <fullName>Freeze_Date__c</fullName>
    <label>Freeze Date</label>
    <type>Date</type>
</CustomField>