force-app/main/default/objects/Account/fields/Full_AccountId__c.field-meta.xml
<CustomField>
    <fullName>Full_AccountId__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full_AccountId</label>
    <type>Text</type>
</CustomField>