force-app/main/default/objects/Account/fields/Full_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Full_Telephone__c</fullName>
    <description>Concatenation of Telephone and Phone Ext # for this Account.</description>
    <formula>IF(isblank(Phone), &quot;&quot;,
 &quot;(&quot; + MID(Phone, 1, 3) +&quot;) &quot; + MID(Phone, 4, 3) + &quot;-&quot; + MID(Phone, 7, 4)

)+

IF(or(isblank(Phone_Ext__c), TEXT( Phone_Ext__c ) == &apos;0&apos;),
&quot;&quot;,
&quot; x&quot; +  TEXT( Phone_Ext__c )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>