force-app/main/default/objects/Account/fields/google_address__c.field-meta.xml
<CustomField>
    <fullName>google_address__c</fullName>
    <label>google_address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>