force-app/main/default/objects/Account/fields/google_name__c.field-meta.xml
<CustomField>
    <fullName>google_name__c</fullName>
    <label>google_name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>