force-app/main/default/objects/Account/fields/google_name_match__c.field-meta.xml
<CustomField>
    <fullName>google_name_match__c</fullName>
    <formula>or (

find(trim(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(google_name__c), &quot;ltd&quot;, &quot;&quot;),&quot;inc&quot;,&quot;&quot;), &quot;.&quot;,&quot;&quot;)), SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(Name), &quot;ltd&quot;, &quot;&quot;),&quot;inc&quot;,&quot;&quot;), &quot;.&quot;,&quot;&quot;)) &gt; 0,

find(trim(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(Name), &quot;ltd&quot;, &quot;&quot;),&quot;inc&quot;,&quot;&quot;), &quot;.&quot;,&quot;&quot;)), SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(google_name__c), &quot;ltd&quot;, &quot;&quot;),&quot;inc&quot;,&quot;&quot;), &quot;.&quot;,&quot;&quot;)) &gt; 0

)</formula>
    <label>google_name_match</label>
    <type>Checkbox</type>
</CustomField>