force-app/main/default/objects/Account/fields/google_phone__c.field-meta.xml
<CustomField>
    <fullName>google_phone__c</fullName>
    <label>google_phone</label>
    <type>Phone</type>
</CustomField>