force-app/main/default/objects/Account/fields/google_phone_match__c.field-meta.xml
<CustomField>
    <fullName>google_phone_match__c</fullName>
    <formula>google_phone__c = Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>google_phone_match</label>
    <type>Checkbox</type>
</CustomField>