force-app/main/default/objects/Account/fields/google_place_id__c.field-meta.xml
<CustomField>
    <fullName>google_place_id__c</fullName>
    <label>google_place_id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>