force-app/main/default/objects/Account/fields/google_rating__c.field-meta.xml
<CustomField>
    <fullName>google_rating__c</fullName>
    <label>google_rating</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>