force-app/main/default/objects/Account/fields/google_rating_count__c.field-meta.xml
<CustomField>
    <fullName>google_rating_count__c</fullName>
    <label>google_rating_count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>