force-app/main/default/objects/Account/fields/google_status__c.field-meta.xml
<CustomField>
    <fullName>google_status__c</fullName>
    <label>google_status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>