force-app/main/default/objects/Account/fields/google_types__c.field-meta.xml
<CustomField>
    <fullName>google_types__c</fullName>
    <label>google_types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>