force-app/main/default/objects/Account/fields/google_website__c.field-meta.xml
<CustomField>
    <fullName>google_website__c</fullName>
    <label>google_website</label>
    <type>Url</type>
</CustomField>