force-app/main/default/objects/Account/fields/google_website_match__c.field-meta.xml
<CustomField>
    <fullName>google_website_match__c</fullName>
    <formula>google_website__c= Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>google_website_match</label>
    <type>Checkbox</type>
</CustomField>