force-app/main/default/objects/Account/fields/Has_Incomplete_Booking__c.field-meta.xml
<CustomField>
    <fullName>Has_Incomplete_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Incomplete Booking</label>
    <type>Checkbox</type>
</CustomField>