force-app/main/default/objects/Account/fields/Has_Note__c.field-meta.xml
<CustomField>
    <fullName>Has_Note__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Note</label>
    <type>Checkbox</type>
</CustomField>