force-app/main/default/objects/Account/fields/Has_Valid_Invoice_Contact__c.field-meta.xml
<CustomField>
    <fullName>Has_Valid_Invoice_Contact__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(Invoice_Contact__c)),
Invoice_Contact__r.Has_Valid_Data__c
),
true,
false)</formula>
    <label>Has Valid Invoice Contact</label>
    <type>Checkbox</type>
</CustomField>