force-app/main/default/objects/Account/fields/Has_Valid_Primary_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Has_Valid_Primary_Billing_Address__c</fullName>
    <formula>IF(
OR(
Primary_Billing_Address_Count__c &lt; 1,
ISBLANK(Primary_Billing_Address__c)
),
FALSE,
TRUE
)</formula>
    <label>Has Valid Primary Billing Address</label>
    <type>Checkbox</type>
</CustomField>