force-app/main/default/objects/Account/fields/Has_Valid_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Has_Valid_Primary_Contact__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK(Primary_Contact__c)),
Primary_Contact__r.Has_Valid_Data__c
),
true,
false)</formula>
    <label>Has Valid Primary Contact</label>
    <type>Checkbox</type>
</CustomField>