force-app/main/default/objects/Account/fields/Invoice_Method__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Method__c</fullName>
    <label>Invoice Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
                <default>true</default>
                <label>Automatic</label>
            </value>
            <value>
                <fullName>End of Month</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Manual Delivery</fullName>
            </value>
            <value>
                <fullName>Do Not Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>