force-app/main/default/objects/Account/fields/January_Goal__c.field-meta.xml
<CustomField>
    <fullName>January_Goal__c</fullName>
    <label>January Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>