force-app/main/default/objects/Account/fields/January_State__c.field-meta.xml
<CustomField>
    <fullName>January_State__c</fullName>
    <label>January State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>