force-app/main/default/objects/Account/fields/July_Goal__c.field-meta.xml
<CustomField>
    <fullName>July_Goal__c</fullName>
    <label>July Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>