force-app/main/default/objects/Account/fields/July_State__c.field-meta.xml
<CustomField>
    <fullName>July_State__c</fullName>
    <label>July State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>