force-app/main/default/objects/Account/fields/June_Goal__c.field-meta.xml
<CustomField>
    <fullName>June_Goal__c</fullName>
    <label>June Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>