force-app/main/default/objects/Account/fields/June_State__c.field-meta.xml
<CustomField>
    <fullName>June_State__c</fullName>
    <label>June State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>