force-app/main/default/objects/Account/fields/Last_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Date__c</fullName>
    <description>Fastcall Last Call Date</description>
    <label>Last Call Date</label>
    <type>DateTime</type>
</CustomField>