force-app/main/default/objects/Account/fields/Last_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Last_Fiscal_Year__c</fullName>
    <label>Last Fiscal Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>