force-app/main/default/objects/Account/fields/Last_Invoice_Balance_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Balance_Update__c</fullName>
    <label>Last Invoice Balance Update</label>
    <type>Date</type>
</CustomField>