force-app/main/default/objects/Account/fields/Last_Primary_Address_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Primary_Address_Change__c</fullName>
    <label>Last Primary Address Change</label>
    <type>DateTime</type>
</CustomField>