force-app/main/default/objects/Account/fields/Last_Sales_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Date__c</fullName>
    <inlineHelpText>The last date a sale was made on this account</inlineHelpText>
    <label>Last Sales Date</label>
    <type>Date</type>
</CustomField>