force-app/main/default/objects/Account/fields/Last_Sales_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Update__c</fullName>
    <label>Last Sales Update</label>
    <type>DateTime</type>
</CustomField>