force-app/main/default/objects/Account/fields/Last_Sales_Update_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Update_Month__c</fullName>
    <label>Last_Sales_Update_Month</label>
    <type>DateTime</type>
</CustomField>