force-app/main/default/objects/Account/fields/LearningLogin_Contract_Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>LearningLogin_Contract_Billing_Period__c</fullName>
    <label>LearningLogin Contract Billing Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>