force-app/main/default/objects/Account/fields/LearningLogin_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>LearningLogin_Contract_End_Date__c</fullName>
    <label>LearningLogin Contract End Date</label>
    <type>Date</type>
</CustomField>