force-app/main/default/objects/Account/fields/LearningLogin_Contract_Length__c.field-meta.xml
<CustomField>
    <fullName>LearningLogin_Contract_Length__c</fullName>
    <label>LearningLogin Contract Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>3 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>