force-app/main/default/objects/Account/fields/LearningLogin_Contract_Owner__c.field-meta.xml
<CustomField>
    <fullName>LearningLogin_Contract_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LearningLogin Contract Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>